--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                 <nav>    <!-- >top go to links navigation< -->
                     <img class="logo" src="/design-files/logo.jpg" alt="Company logo.">
                     <a href="" class="nav-links">Home</a>
-                    <a href="" class="nav-links">About</a>
+                    <a href="" class="nav-links">About Us</a>
                     <a href="" class="nav-links">Login</a>
                 </nav>    <!-- >page name< -->
             </header>
@@ -27,19 +27,19 @@
         <!-- >Explaining what we do here< -->
         <h3 class="main-title">What we do</h3>
         <Section class="main">
-            
+        <button class = "tButton">Click Here to Browse Rentals</button>    
             <div class = "middle-section">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus rem laboriosam rerum aliquam facere quo, repellendus ut magnam quas natus officia eum, perspiciatis similique reprehenderit voluptates doloribus. Sint, voluptas, quos fugit, nam mollitia molestiae doloribus veritatis numquam reiciendis autem minima illum odio sunt iure quis suscipit error rem facilis? Sequi asperiores officia saepe nemo necessitatibus itaque nihil natus autem doloribus ipsum voluptatum molestiae, magni laboriosam eveniet quia dolores veniam! Provident dolorem deleniti alias consequatur aliquam eaque repellat facere harum. Vero soluta fuga quidem dicta aspernatur omnis odit mollitia minima! Mollitia unde dolorem cumque ut rem possimus quibusdam dolores accusamus commodi!</p>  
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae inventore facilis quisquam veritatis, debitis repellat sapiente nihil necessitatibus tempore eveniet explicabo ipsa architecto ut vero aliquid id dolorum? Neque quos, velit vitae quae fuga temporibus, harum labore aspernatur nesciunt quis non. Vero quibusdam minima rerum, voluptates id consequatur reiciendis amet dolorem molestias ipsum sunt aut veniam reprehenderit eveniet dolore architecto deserunt asperiores quam soluta quos facere provident aspernatur saepe! Eligendi perspiciatis asperiores atque error autem optio, totam voluptatem officiis odio architecto a quam molestiae cumque quis tempora. Fuga dolores animi suscipit, porro sunt quas quod inventore eveniet. Ut, sapiente odio.</p>                   
+                <p>UMTS [Use My Tech Stuff] is a platform for connecting users in need of renting equipment/properties with the users willing to rent out same. It eliminates the overhead cost due to middlemen in renting equipment or properties. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae inventore facilis quisquam veritatis, debitis repellat sapiente nihil necessitatibus tempore eveniet explicabo ipsa architecto ut vero aliquid id dolorum? Neque quos, velit vitae quae fuga temporibus, harum labore aspernatur nesciunt quis non. Vero quibusdam minima rerum, voluptates id consequatur reiciendis amet dolorem molestias ipsum sunt aut veniam reprehenderit eveniet dolore architecto deserunt asperiores quam soluta quos facere provident aspernatur saepe! Eligendi perspiciatis asperiores atque error autem optio, totam voluptatem officiis odio architecto a quam molestiae cumque quis tempora. Fuga dolores animi suscipit, porro sunt quas quod inventore eveniet. Ut, sapiente odio.</p>                   
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto praesentium repellendus officia nostrum saepe, magnam rem repudiandae illum temporibus molestiae dignissimos tenetur. Modi repudiandae at quasi a fugiat, porro fugit obcaecati laboriosam cumque illum debitis soluta aliquid. Quod, ipsam odio. Aliquam quas delectus suscipit impedit praesentium. Soluta obcaecati quas fugit eveniet velit, ut omnis fugiat sunt! Quisquam doloribus eius molestias aliquam, placeat ab doloremque a. Quas, saepe. Minus placeat quod nesciunt nobis repudiandae eligendi tempora, doloremque fugit in incidunt facere, unde voluptate corporis. Corporis delectus eius ullam dicta, ducimus rem alias error, quis enim dolor fugiat sed, itaque iusto!</p>
             </div>
         </Section>
-        <button>Click Here to start</button>
+        <button class = "bButton">Click Here to Add Rentals</button>
         <img class="bottom-img" src="/design-files/shipping.jpg" alt="">
           
         <footer>    
             <!-- >copywright< -->
-            <p class="copyright">copywright!</p>
+            <p class="copyright">copywright! 2019</p>
         </footer>
     </div>
 </body>
