--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>UMTS</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,400i,700&display=swap"rel="stylesheet"/>
 </head>
@@ -14,9 +14,9 @@
             <header>
                 <nav>    <!-- >top go to links navigation< -->
                     <img class="logo" src="/design-files/logo.jpg" alt="Company logo.">
-                    <a href="" class="nav-links">Home</a>
-                    <a href="" class="nav-links">About Us</a>
-                    <a href="" class="nav-links">Login</a>
+                    <a href="home.html" class="nav-links">Home</a>
+                    <a href="about.html" class="nav-links">About Us</a>
+                    <a href="" class="nav-links">Login / Sign Up</a>
                 </nav>    <!-- >page name< -->
             </header>
         </div>
@@ -39,7 +39,7 @@
           
         <footer>    
             <!-- >copywright< -->
-            <p class="copyright">copywright! 2019</p>
+            <p class="copyright">&copy; Rent-Tech 2019</p>
         </footer>
     </div>
 </body>
