--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dream Machine</title>
+    <title>About</title>
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,400i,700&display=swap"rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
+    <div class="container2">
         <div class = "topNav">   
             <header>
                 <nav>    <!-- >top go to links navigation< -->
@@ -20,25 +20,23 @@
                 </nav>    <!-- >about page name< -->
             </header>
         </div>
-        <h1 class="title-about">About Us</h1>
-           
-        <img class="top-img" src="./design-files/starNight.jpg" alt="Photo by Bra Kou from Pexels">
+        <h1 class = "title-about">The Team</h1>
 
-        <!-- >Explaining what we do here< -->
-        <h3 class="about-title">What we do</h3>
-        <Section class="main">
-            
-            <div class = "middle-section">
-               <p></p>
-               <p></p>
-               <p></p>
-               <p></p>
-               <p></p>
-               <p></p>
-               <p></p>
+        <section class="main2">           
+            <div class = "middle-section2">
+               <p><img src="/design-files/Rod.jpg" alt="Rodney"><br>Rodney Race<br>UI Web Designer</p>
+               <p><img src="/design-files/Daniel.jpg" alt="Daniel"><br>Daniel Moralez<br>UI Web Designer</p>
+               <p><img src="/design-files/Wangdi.jpg" alt="Wangdi"><br>Wangdi Tenzing<br>UI Web Designer</p> 
             </div>
-        </Section>
-        <img class="bottom-img" src="./design-files/dark-dawn.jpg" alt="Photo by Sam Kolder from Pexels">
+        </section>
+        <section class="main3">
+            <div class = "middle-section3">
+               <p><img src="/design-files/Sean.jpg" alt="Sean"><br>Sean Hockin<br>React I</p>
+               <p><img src="/design-files/Oscar.jpg" alt="Oscar"><br>Oscar Lopez<br>React I</p>
+               <p><img src="/design-files/Raajn.jpg" alt="Raajn"><br>Raajn Patel<br>React II</p>
+               <p><img src="/design-files/Keron.jpg" alt="Keron"><br>Keron Gilbert<br>React II</p>
+            </div>
+        </section>
 
         <footer>    
             <!-- >copywright< -->
