--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container2">
-        <div class = "topNav">   
+        <div class = "topNav2">   
             <header>
                 <nav>    <!-- >top go to links navigation< -->
                     <img class="logo" src="/design-files/logo.jpg" alt="Company logo.">
@@ -20,21 +20,21 @@
                 </nav>    <!-- >about page name< -->
             </header>
         </div>
-        <h1 class = "title-about">The Team</h1>
+        <h1 class = "title-about">The UI Team</h1>
 
         <section class="main2">           
             <div class = "middle-section2">
-               <p><img src="/design-files/Rod.jpg" alt="Rodney"><br>Rodney Race<br>UI Web Designer</p>
-               <p><img src="/design-files/Daniel.jpg" alt="Daniel"><br>Daniel Moralez<br>UI Web Designer</p>
-               <p><img src="/design-files/Wangdi.jpg" alt="Wangdi"><br>Wangdi Tenzing<br>UI Web Designer</p> 
+               <p><img src="/design-files/Rod.jpg" alt="Rodney"><br>Rodney Race<br>UI Web Developer<br>Git-Hub Handle : Rodney-Race<br>Location : Lake city, Florida<br>Email : rodneyrace@gmail.com</p>
+               <p><img src="/design-files/Daniel.jpg" alt="Daniel"><br>Daniel Moralez<br>UI Web Developer<br>Git-Hub Handle : PrinceD96<br>Location : Boyton Beach, Florida<br>Email : daniel.a.moralesalt@gmail.com</p>
+               <p><img src="/design-files/Wangdi.jpg" alt="Wangdi"><br>Wangdi Tenzing<br>UI Web Developer<br>Git-Hub Handle : ZIng178<br>Location : New York City, New York<br>Email : wangdi457@gmail.com</p> 
             </div>
         </section>
+        <h1 class = "title-about2">The React Team</h1>
         <section class="main3">
             <div class = "middle-section3">
-               <p><img src="/design-files/Sean.jpg" alt="Sean"><br>Sean Hockin<br>React I</p>
-               <p><img src="/design-files/Oscar.jpg" alt="Oscar"><br>Oscar Lopez<br>React I</p>
-               <p><img src="/design-files/Raajn.jpg" alt="Raajn"><br>Raajn Patel<br>React II</p>
-               <p><img src="/design-files/Keron.jpg" alt="Keron"><br>Keron Gilbert<br>React II</p>
+               <p><img src="/design-files/Sean.jpg" alt="Sean"><br>Sean Hockin<br>React I<br>Git-Hub Handle : shockin779<br>Location : Salt Lake City, Utah<br>Email : sean.hockin@gmail.com</p>
+               <p><img src="/design-files/Oscar.jpg" alt="Oscar"><br>Oscar Lopez<br>React I<br>Git-Hub Handle : Oscar-Lopez<br>Location : <br>Email : d1lopeztv@gmail.com</p>
+               <p><img src="/design-files/Keron.jpg" alt="Keron"><br>Keron Gilbert<br>React II<br>Git-Hub Handle : stri7ker<br>Location : <br>Email : K.gilbert7854@gmail.com</p>
             </div>
         </section>
 
