--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 
         <!-- >Explaining what we do here< -->
         <h3 class="main-title">What we do</h3>
-        <button class = "tButton">Add Rentals</button>
+        <button>Add Rentals</button>
         <Section class="main">    
             <div class = "middle-section">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus rem laboriosam rerum aliquam facere quo, repellendus ut magnam quas natus officia eum, perspiciatis similique reprehenderit voluptates doloribus. Sint, voluptas, quos fugit, nam mollitia molestiae doloribus veritatis numquam reiciendis autem minima illum odio sunt iure quis suscipit error rem facilis? Sequi asperiores officia saepe nemo necessitatibus itaque nihil natus autem doloribus ipsum voluptatum molestiae, magni laboriosam eveniet quia dolores veniam! Provident dolorem deleniti alias consequatur aliquam eaque repellat facere harum. Vero soluta fuga quidem dicta aspernatur omnis odit mollitia!</p>  
@@ -35,7 +35,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto praesentium repellendus officia nostrum saepe, magnam rem repudiandae illum temporibus molestiae dignissimos tenetur. Modi repudiandae at quasi a fugiat, porro fugit obcaecati laboriosam cumque illum debitis soluta aliquid. Quod, ipsam odio. Aliquam quas delectus suscipit impedit praesentium. Soluta obcaecati quas fugit eveniet velit, ut omnis fugiat sunt! Quisquam doloribus eius molestias aliquam, placeat ab doloremque a. Quas, saepe. Minus placeat quod nesciunt nobis repudiandae eligendi tempora, doloremque fugit in incidunt facere, unde voluptate corporis. Corporis delectus eius ullam dicta!</p>
             </div>
         </Section>
-        <button class = "bButton">Browse Rentals</button>
+        <button>Browse Rentals</button>
         <img class="bottom-img" src="/design-files/shipping.jpg" alt="">
           
         <footer>    
