--- a/about.html
+++ b/about.html
@@ -21,7 +21,6 @@
             </header>
         </div>
         <h1 class = "title-about">The UI Team</h1>
-
         <section class="main2">           
             <div class = "middle-section2">
                <p><img src="/design-files/Rod.jpg" alt="Rodney"><br>Rodney Race<br>UI Web Developer<br>Git-Hub Handle : Rodney-Race<br>Location : Lake city, Florida<br>Email : rodneyrace@gmail.com</p>
@@ -29,7 +28,7 @@
                <p><img src="/design-files/Wangdi.jpg" alt="Wangdi"><br>Wangdi Tenzing<br>UI Web Developer<br>Git-Hub Handle : ZIng178<br>Location : New York City, New York<br>Email : wangdi457@gmail.com</p> 
             </div>
         </section>
-        <h1 class = "title-about2">The React Team</h1>
+        <h1 class = "title-about">The React Team</h1>
         <section class="main3">
             <div class = "middle-section3">
                <p><img src="/design-files/Sean.jpg" alt="Sean"><br>Sean Hockin<br>React I<br>Git-Hub Handle : shockin779<br>Location : Salt Lake City, Utah<br>Email : sean.hockin@gmail.com</p>
